--- a/Diagrams/Потоки событий/Поиск книги.md
+++ b/Diagrams/Потоки событий/Поиск книги.md
@@ -1,18 +1,17 @@
-# Поток событий для прецедента "Поиск книги":
+# РџРѕС‚РѕРє СЃРѕР±С‹С‚РёР№ РґР»СЏ РїСЂРµС†РµРґРµРЅС‚Р° "РџРѕРёСЃРє РєРЅРёРіРё":
 
 
 
-### Основной поток:
+### РћСЃРЅРѕРІРЅРѕР№ РїРѕС‚РѕРє:
 
-1. Библиотекарь пытается войти в систему. 
-2. Вход успешно. 
-3. Библиотекарь пытается выполнить поиск записи для определенной книги. 
-4. Запись найдена. 
-5. Он / она хочет отредактировать запись. 
-6. Запись была отредактирована.
+1. Р‘РёР±Р»РёРѕС‚РµРєР°СЂСЊ РїС‹С‚Р°РµС‚СЃСЏ РІРѕР№С‚Рё РІ СЃРёСЃС‚РµРјСѓ. 
+2. Р’С…РѕРґ СѓСЃРїРµС€РЅРѕ. 
+3. Р‘РёР±Р»РёРѕС‚РµРєР°СЂСЊ РїС‹С‚Р°РµС‚СЃСЏ РІС‹РїРѕР»РЅРёС‚СЊ РїРѕРёСЃРє Р·Р°РїРёСЃРё РґР»СЏ РѕРїСЂРµРґРµР»РµРЅРЅРѕР№ РєРЅРёРіРё. 
+4. Р—Р°РїРёСЃСЊ РЅР°Р№РґРµРЅР°. 
 
 
-### Альтернативный поток событий:
-1. Если логин введен неверно Библиотекарь должен  повторить попытку. 
-2. Если поиск книги не увенчался успехом, то эту книгу нельзя просмотреть или отредактировать. 
+
+### РђР»СЊС‚РµСЂРЅР°С‚РёРІРЅС‹Р№ РїРѕС‚РѕРє СЃРѕР±С‹С‚РёР№:
+1. Р•СЃР»Рё Р»РѕРіРёРЅ РІРІРµРґРµРЅ РЅРµРІРµСЂРЅРѕ Р‘РёР±Р»РёРѕС‚РµРєР°СЂСЊ РґРѕР»Р¶РµРЅ  РїРѕРІС‚РѕСЂРёС‚СЊ РїРѕРїС‹С‚РєСѓ. 
+2. Р•СЃР»Рё РїРѕРёСЃРє РєРЅРёРіРё РЅРµ СѓРІРµРЅС‡Р°Р»СЃСЏ СѓСЃРїРµС…РѕРј, С‚Рѕ СЌС‚Сѓ РєРЅРёРіСѓ РЅРµР»СЊР·СЏ РїСЂРѕСЃРјРѕС‚СЂРµС‚СЊ РёР»Рё РѕС‚СЂРµРґР°РєС‚РёСЂРѕРІР°С‚СЊ. 
 
